Implementado a adição de usuarios
Impementado a adição de usuarios e layout para preenchimento de dados, e
criação das string dos rotulos dos campos na activiy, adicionado os
itens do menu de usuarios

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="modo_conectado_sumario">Manter sempre conectado</string>
     <string name="modo_conectado">Modo conectado</string>
     <string name="preferencias">Preferências</string>
+    <string name="action_permissoes">Permissões</string>
     <string name="entrar">Login</string>
     <string name="manter_conectado">Manter conectado</string>
     <string name="usuario">Usuário</string>
