Ajustes no layout
Ajustes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,19 @@
     <string name="modo_conectado">Modo conectado</string>
     <string name="preferencias">Preferências</string>
     <string name="action_permissoes">Permissões</string>
+    <string name="permissoes">Permissões de usuários</string>
+    <string name="modulo_financeiro">Financeiro</string>
+    <string name="modulo_produtos_sumario">Permite acesso total ao cadastro,edição e exlusão de produtos</string>
+    <string name="modulo_cobrancas_sumario">Exclusão,Edição</string>
+    <string name="modulo_clientes_sumario">Exclusão,Listagem</string>
+    <string name="modulo_usuario_sumario">Adicionar,Editar e Excluir</string>
+    <string name="modulo_pedidos_sumario">Permite a exclusão,edição de pedidos</string>
+    <string name="modulo_produtos">Produtos</string>
+    <string name="modulo_pedidos">Cobranças</string>
+    <string name="modulo_clientes">Clientes</string>
+    <string name="modulo_cobrancas">Cobranças</string>
+    <string name="modulo_usuario">Usuários</string>
+    <string name="modulo_financeiro_sumario">Permite efetuar operações no modulo financeiro</string>
     <string name="entrar">Login</string>
     <string name="manter_conectado">Manter conectado</string>
     <string name="usuario">Usuário</string>
